<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feedback">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="#0077b5"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_for_quicklib"
            android:layout_margin="10dp"
            android:textSize="22sp"
            android:textColor="#ffffff"/>


    </LinearLayout>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/feedbox"
            android:id="@+id/feededit"
            android:hint="@string/please_enter_here"
            android:singleLine="false"
            android:padding="10dp"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/feedbutton"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/second_start"
            android:fontFamily="sans-serif"
            android:text="@string/submit_feedback"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>