<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".landingpage"
    tools:showIn="@layout/app_bar_landingpage">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">


      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="80dp"
          android:id="@+id/icon"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/icon" />




          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/search_by"
              android:textSize="22sp"
              android:layout_marginTop="15dp"
              android:layout_gravity="center_horizontal"
              android:gravity="center"/>


          <Spinner
              android:id="@+id/spinner1"
              android:layout_width="180dp"
              android:layout_height="50dp"
              android:layout_marginTop="20dp"
              android:layout_gravity="center_horizontal"
              android:gravity="center"
              style="@android:style/Widget.Holo.Light.Spinner"
              android:spinnerMode="dropdown"/>


      <AutoCompleteTextView
          android:layout_width="350dp"
          android:layout_gravity="center_horizontal"
          android:layout_height="55dp"
          android:id="@+id/searchkeyword"
          android:background="@drawable/searchicon"
          android:drawableStart="@drawable/search"
          android:drawablePadding="10dp"
          android:padding="10dp"
          android:hint="@string/search_books_here"
          android:singleLine="true"
          android:layout_marginTop="25dp"/>


      <android.support.v7.widget.AppCompatButton
          android:id="@+id/searchq"
          android:layout_width="250dp"
          android:layout_height="40dp"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="30dp"
          android:fontFamily="sans-serif"
          android:text="@string/quicklib_search"
          android:textAllCaps="false"
          android:background="@drawable/start_button"
          android:textColor="#ffffff" />

  </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_according_to"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:textColor="#333"
        android:layout_margin="25dp"/>



</RelativeLayout>