<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchresult">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="#0077b5"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_book"
                android:layout_margin="10dp"
                android:textSize="22sp"
                android:textColor="#ffffff"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/feedbox"
                android:id="@+id/feedreviewedit"
                android:hint="@string/please_enter_here"
                android:singleLine="false"
                android:padding="10dp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/feedreviewbutton"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/second_start"
                android:fontFamily="sans-serif"
                android:text="@string/submit_review"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

        </LinearLayout>

        <ListView
            android:id="@+id/listfeed"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:numColumns="2"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/feedreviewprog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#bc000000"
        android:layout_marginTop="45dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:indeterminate="true" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:background="#ffffff"
        android:id="@+id/feedreviewnotify"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_review_available"
            android:textSize="25sp"
            android:gravity="center_horizontal"/>
    </RelativeLayout>

</RelativeLayout>